--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".GameView"
             android:screenOrientation="landscape"></activity>
+        <activity android:name=".Options"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
