--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             ></activity>
         <activity android:name=".Options"
             android:screenOrientation="landscape"></activity>
+        <activity android:name=".GameOverActivity"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
